another spacing fix for that error box

--- a/perma_web/static/css/style-responsive.scss
+++ b/perma_web/static/css/style-responsive.scss
@@ -1695,6 +1695,12 @@ p.body { @extend p.body-text; }
 	}
 }
 
+._isPublic {
+	.create-errors {
+		padding: 0;
+	}
+}
+
 .preview-row {
     margin: $double;
     padding: $double 0;
